// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-open-with/OpenWithDropdownMenuItem should be disabled with a reason if the integration is disabled 1`] = `
<MenuItem
  className=""
  isDisabled={true}
  onClick={[Function]}
>
  <FileIcon
    dimension={30}
    height={30}
    width={30}
  />
  <span>
    <p
      className="bcow-menu-item-title"
    >
      A new integration
    </p>
    <p
      className="bcow-menu-item-description"
    >
      The integration is not currently available
    </p>
  </span>
</MenuItem>
`;

exports[`elements/content-open-with/OpenWithDropdownMenuItem should render correctly if the item is disabled because Box Tools is not installed 1`] = `
<MenuItem
  className="bcow-box-tools-uninstalled"
  isDisabled={true}
  onClick={[Function]}
>
  <FileIcon
    dimension={30}
    height={30}
    width={30}
  />
  <span>
    <p
      className="bcow-menu-item-title"
    >
      A new integration
    </p>
    <p
      className="bcow-menu-item-description"
    >
      <FormattedMessage
        defaultMessage="Opening this file with other services is currently unavailable"
        id="be.errorOpenWithDescription"
      />
    </p>
  </span>
</MenuItem>
`;

exports[`elements/content-open-with/OpenWithDropdownMenuItem should render correctly if the item is disabled because hidden collaborators 1`] = `
<MenuItem
  className="bcow-box-tools-uninstalled"
  isDisabled={true}
  onClick={[Function]}
>
  <FileIcon
    dimension={30}
    height={30}
    width={30}
  />
  <span>
    <p
      className="bcow-menu-item-title"
    >
      A new integration
    </p>
    <p
      className="bcow-menu-item-description"
    >
      <FormattedMessage
        defaultMessage="Opening this file with other services is currently unavailable"
        id="be.errorOpenWithDescription"
      />
    </p>
  </span>
</MenuItem>
`;

exports[`elements/content-open-with/OpenWithDropdownMenuItem should render correctly if the item is disabled because of an access policy 1`] = `
<MenuItem
  className="bcow-box-tools-uninstalled"
  isDisabled={true}
  onClick={[Function]}
>
  <FileIcon
    dimension={30}
    height={30}
    width={30}
  />
  <span>
    <p
      className="bcow-menu-item-title"
    >
      A new integration
    </p>
    <p
      className="bcow-menu-item-description"
    >
      <FormattedMessage
        defaultMessage="Local editing of this content has been disabled based on an access policy"
        id="be.boxEditErrorBlockedByPolicy"
      />
    </p>
  </span>
</MenuItem>
`;

exports[`elements/content-open-with/OpenWithDropdownMenuItem should render the description and correct icon 1`] = `
<MenuItem
  className=""
  onClick={[Function]}
>
  <IconAdobeSign
    dimension={30}
    height={30}
    width={30}
  />
  <span>
    <p
      className="bcow-menu-item-title"
    >
      Adobe Sign
    </p>
    <p
      className="bcow-menu-item-description"
    >
      Open With Adobe
    </p>
  </span>
</MenuItem>
`;

exports[`elements/content-open-with/OpenWithDropdownMenuItem should use the default error for a disabled integration if there is no reason 1`] = `
<MenuItem
  className=""
  isDisabled={true}
  onClick={[Function]}
>
  <FileIcon
    dimension={30}
    height={30}
    width={30}
  />
  <span>
    <p
      className="bcow-menu-item-title"
    >
      A new integration
    </p>
    <p
      className="bcow-menu-item-description"
    >
      <FormattedMessage
        defaultMessage="Opening this file with other services is currently unavailable"
        id="be.errorOpenWithDescription"
      />
    </p>
  </span>
</MenuItem>
`;

exports[`elements/content-open-with/OpenWithDropdownMenuItem should use the default icon when no mapping can be found to an existing icon 1`] = `
<MenuItem
  className=""
  onClick={[Function]}
>
  <FileIcon
    dimension={30}
    height={30}
    width={30}
  />
  <span>
    <p
      className="bcow-menu-item-title"
    >
      A new integration
    </p>
    <p
      className="bcow-menu-item-description"
    >
      Open With the new integration
    </p>
  </span>
</MenuItem>
`;
